Model viewer & panel

--- a/mainapp/static/json/config.json
+++ b/mainapp/static/json/config.json
@@ -83,7 +83,7 @@
         "Left-Cerebellum-White-Matter",
         "Left-Cerebellum-Cortex",
         "Left-Thalamus",
-        "Left-Thalamus-Proper*",
+        "Left-Thalamus-Proper",
         "Left-Caudate",
         "Left-Putamen",
         "Left-Pallidum",
@@ -122,7 +122,7 @@
         "Right-Cerebellum-White-Matter",
         "Right-Cerebellum-Cortex",
         "Right-Thalamus",
-        "Right-Thalamus-Proper*",
+        "Right-Thalamus-Proper",
         "Right-Caudate",
         "Right-Putamen",
         "Right-Pallidum",
