Segmentation view done. Needs improvement on workflow

--- a/mainapp/static/json/config.json
+++ b/mainapp/static/json/config.json
@@ -143,7 +143,6 @@
         "Right-mOg",
         "Right-pOg",
         "Right-Stellate",
-        "Right-Porg",
-        "Right-Aorg"
+        "Right-Porg"    
     ]
 }
