--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,115 @@
-# SynthSeg Requirements
-tensorflow==2.13.0
-keras==2.13.1 
-nibabel==5.0.1
-matplotlib==3.6.2
-scipy==1.11.3
-protobuf==4.24.4
-nibabel==5.0.1
-
-# Other Requirements
-# Django==4.2.6
-# python-socketio==5.9.0
-# redis==5.0.1
-# daphne==4.0.0
-# channels==4.0.0
-# eventlet==0.33.3
-
+absl-py==2.0.0
+amqp==5.1.1
 apturl==0.5.2
 asgiref==3.7.2
+astunparse==1.6.3
 async-timeout==4.0.3
 attrs==23.1.0
 autobahn==23.6.2
 Automat==22.10.0
 bcrypt==3.2.0
 bidict==0.22.1
+billiard==4.1.0
 blinker==1.4
 Brlapi==0.8.3
+cachetools==5.3.1
+celery==5.3.4
 certifi==2020.6.20
 cffi==1.16.0
 channels==4.0.0
 channels-redis==4.1.0
 chardet==4.0.0
-click==8.0.3
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.4
 command-not-found==0.3
 constantly==15.1.0
+contourpy==1.1.1
 cryptography==41.0.4
 cupshelpers==1.0
+cycler==0.12.1
 daphne==4.0.0
 dbus-python==1.2.18
 defer==1.0.6
 distro==1.7.0
 distro-info==1.1+ubuntu0.1
 Django==4.2.6
+django-cleanup==8.0.0
+django-environ==0.11.2
 dnspython==2.4.2
 duplicity==0.8.21
 eventlet==0.33.3
 fasteners==0.14.1
+filelock==3.12.4
+flatbuffers==23.5.26
+fonttools==4.43.1
+fsspec==2023.10.0
 future==0.18.2
+gast==0.4.0
+google-auth==2.23.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
 greenlet==3.0.0
+grpcio==1.59.0
 h11==0.14.0
+h5py==3.10.0
+-e git+https://github.com/MIC-DKFZ/HD-BET@ae160681324d524db3578e4135bf781f8206e146#egg=HD_BET
 httplib2==0.20.2
 hyperlink==21.0.0
 idna==3.3
+imageio==2.31.6
 importlib-metadata==4.6.4
 incremental==22.10.0
 jeepney==0.7.1
+Jinja2==3.1.2
+keras==2.13.1
 keyring==23.5.0
+kiwisolver==1.4.5
+kombu==5.3.2
 language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
+lazy_loader==0.3
+libclang==16.0.6
 lockfile==0.12.2
 louis==3.20.0
 macaroonbakery==1.3.1
 Mako==1.1.3
+Markdown==3.5
 MarkupSafe==2.0.1
+matplotlib==3.6.2
 monotonic==1.6
 more-itertools==8.10.0
+mpmath==1.3.0
 msgpack==1.0.7
 netifaces==0.11.0
+networkx==3.2
+nibabel==5.0.1
+numpy==1.24.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.52
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.0
 olefile==0.46
+opt-einsum==3.3.0
+packaging==23.2
 paramiko==2.9.3
 pexpect==4.8.0
 Pillow==9.0.1
-protobuf==3.12.4
+prompt-toolkit==3.0.39
+protobuf==4.24.4
 ptyprocess==0.7.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -89,8 +124,9 @@ pyOpenSSL==23.2.0
 pyparsing==2.4.7
 pyRFC3339==1.1
 python-apt==2.4.0+ubuntu2
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.0.0
 python-engineio==4.7.1
 python-socketio==5.9.0
 pytz==2022.1
@@ -99,25 +135,45 @@ PyYAML==5.4.1
 redis==5.0.1
 reportlab==3.6.8
 requests==2.25.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-image==0.22.0
+scipy==1.11.3
+screen-resolution-extra==0.0.0
 SecretStorage==3.3.1
 service-identity==23.1.0
 simple-websocket==1.0.0
+SimpleITK==2.3.0
 six==1.16.0
 sqlparse==0.4.4
+sympy==1.12
 systemd-python==234
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.3.0
+tifffile==2023.9.26
+torch==2.1.0
+triton==2.1.0
 Twisted==23.8.0
 txaio==23.1.1
 typing_extensions==4.8.0
+tzdata==2023.3
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
 unattended-upgrades==0.1
 urllib3==1.26.5
 usb-creator==0.3.7
+vine==5.0.0
 wadllib==1.3.6
+wcwidth==0.2.8
+Werkzeug==3.0.0
+wrapt==1.15.0
 wsproto==1.2.0
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
 zope.interface==6.1
-
