--- a/mainapp/static/json/config.json
+++ b/mainapp/static/json/config.json
@@ -1,6 +1,6 @@
 {
     "colors": [
-        "000000",
+        "FFFFFF",
         "4682B4",
         "F5F5F5",
         "CD3E4E",
@@ -73,7 +73,7 @@
         "337132"
     ],
     "names": [
-        "Unknown",
+        "Skull",
         "Left-Cerebral-Exterior",
         "Left-Cerebral-White-Matter",
         "Left-Cerebral-Cortex",
