UI & Vis Updates

--- a/mainapp/static/json/config.json
+++ b/mainapp/static/json/config.json
@@ -73,7 +73,7 @@
         "337132"
     ],
     "names": [
-        "Skull",
+        "Smoothened-Skull",
         "Left-Cerebral-Exterior",
         "Left-Cerebral-White-Matter",
         "Left-Cerebral-Cortex",
@@ -97,7 +97,7 @@
         "Line-1",
         "Line-2",
         "Line-3",
-        "CSF",
+        "Cerebrospinal-Fluid (CSF)",
         "Left-Lesion",
         "Left-Accumbens-area",
         "Left-Substancia-Nigra",
